Criação e confirmação de conta de usuário (#25)
CLOSES #24

* Adiciona endpoint para criação de conta
* Adiciona endpoints para confirmação de conta
